--- a/package.json
+++ b/package.json
@@ -1,8 +1,14 @@
 {
 	"name": "fcc-learn-npm-package-json",
+  "author": "Aylen",
+  "description": "freeCodeCamp backEnd",
+  "keywords": [ "freecodecamp", "backEnd" ],
+  "license": "MIT",
+  "version": "1.0.0",
 	"dependencies": {
-		"express": "^4.14.0"
-	},
+		"express": "^4.14.0",
+    "@freecodecamp/example": "1.1.0"
+  },
 	"main": "server.js",
 	"scripts": {
 		"start": "node server.js"
